Fixed spacing on banner

--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ div.bannercontent {
 	width: 500px;
 	padding: 15px;
 	top: 0px;
-	word-spacing: 20pt;
+	word-spacing: 15pt;
 }
 div.body {
 	background-color: #FFFFFF;
